--- a/templates/qa_feedback.html
+++ b/templates/qa_feedback.html
@@ -17,12 +17,12 @@
                     <!-- Role Input -->
                     <div class="row mb-4">
                         <div class="col-md-8">
-                            <label for="role" class="form-label fw-bold">Role/Position</label>
+                            <label for="role" class="form-label fw-bold text-white">Role/Position</label>
                             <input type="text" class="form-control form-control-lg" id="role" name="role" 
                                    placeholder="e.g., Software Engineer, Data Scientist, Product Manager" required>
                         </div>
                         <div class="col-md-4">
-                            <label for="num-questions" class="form-label fw-bold">Number of Questions</label>
+                            <label for="num-questions" class="form-label fw-bold text-white">Number of Questions</label>
                             <select class="form-select form-select-lg" id="num-questions" name="num_questions">
                                 <option value="3">3 Questions</option>
                                 <option value="5">5 Questions</option>
