--- a/templates/base.html
+++ b/templates/base.html
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{{ url_for('index') }}">Home</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{{ url_for('qa_feedback_form') }}">Q&A Feedback</a>
+                        <a class="nav-link" href="{{ url_for('qa_feedback_form') }}">Q&A Feedback</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{{ url_for('resources') }}">Resources</a>
+                        <a class="nav-link" href="{{ url_for('resources') }}">Resources</a>
                     </li>
                 </ul>
             </div>
